--- a/our-teams-pages/consulting.html
+++ b/our-teams-pages/consulting.html
@@ -110,7 +110,7 @@
                     <a href='https://www.linkedin.com/in/mingon-song-8b0154224/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
                 </div>
             </div>
-            <div class="team-image-row spacing-down reveal">
+            <div class="team-image-row reveal">
                 <div class="exec-container">
                     <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/mojan.jpg"/>
                     <div class="exec-name">Mojad Majid</div>
@@ -126,12 +126,20 @@
                     <div class="exec-position">Project Associate</div>
                     <a href='https://www.linkedin.com/in/krisha-kalsi/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
                 </div>
+            </div>
+            <div class="team-image-row spacing-down reveal">
                 <div class="exec-container">
                     <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/linh.jpg"/>
                     <div class="exec-name">Nguyen Thao Linh Pham</div>
                     <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                     <div class="exec-position">Project Associate</div>
                     <a href='https://www.linkedin.com/in/linhphamuoft'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
+                </div>
+                <div class="exec-container">
+                    <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/angelo.jpg"/>
+                    <div class="exec-name"> Angelo Gener</div>
+                    <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                    <div class="exec-position">Project Associate</div>
                 </div>
             </div>
 
