--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
                         <div class="event-container">
                         
                             <div class="events-description">
-                                t will be a great opportunity to get to know the members of the club while also having fun. Feel free to bring your friends and partake in lots of fun activities at the venue! 
+                                It will be a great opportunity to get to know the members of the club while also having fun. Feel free to bring your friends and partake in lots of fun activities at the venue! 
                             </div>
+                            <br>
+                            <br>
                         </div>
                     </div>
                         
