adding more partner images

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                     <div class="our-partners-container">
                         <div class="partner-images-row reveal">
                             <a href="https://community.bravecareer.io/c/start-here/"><img src="sdss-website-images/partner-images/brave.png" alt="partner-image"/></a>
-                            
+                            <a href=""><img src="sdss-website-images/partner-images/u_of_t_statistical_sciences_logo.png" alt="stats-partner" /></a>
+                            <a href=""><img src="sdss-website-images/partner-images/uoft-logo-blue.svg" alt="stats-partner" /></a>
                         </div>
 
                     </div>
